--- a/app/src/main/res/layout/activity_triang.xml
+++ b/app/src/main/res/layout/activity_triang.xml
@@ -13,6 +13,7 @@
     <lvr.sidnapp.PositionView
         android:id="@+id/posView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:onClick="posViewClick"/>
 
 </RelativeLayout>
